@@ -5,6 +5,9 @@ Aug 18 2002  2.5.2  Moved netline to panelfront_display.cc
                     Added fflush to waypoint writing
                     Added sync() to file writing
                     Fixed group handling of clients
+                    Added handling of probe requests as clients to fetch
+                     transmission maxrate
+                    Fixed finding of 0.0.0.0 client addresses
 Aug 16 2002  2.5.2  Fixed dumpfile.h to not generate warnings on GCC 3.2
                     ACPI battery support patches merged in (configure with
                      --enable-acpi) (Million and Juliano)
